--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
     <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="text-center">Election Results</h1>
+          <h1 class="text-center">--DappVote--</h1>
           <hr/>
           <br/>
           <div id="loader">
-            <p class="text-center">Loading...</p>
+            <p class="text-center">Please Login Using Your Private Key</p>
           </div>
           <div id="content" style="display: none;">
             <table class="table">
