--- a/src/index.html
+++ b/src/index.html
@@ -1,66 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Election Results</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/app.css" rel= "stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Election Results</title>
+
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/app.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      
     <![endif]-->
-  </head>
-  <body>
-    <div class="container" style="width: 650px;">
-      <div class="row">
-        <div class="col-lg-12">
-          <h1 class="text-center">--DappVote--</h1>
-          <hr/>
-          <br/>
-          <div id="loader">
-            <p class="text-center">Please Login Using Your Private Key</p>
-          </div>
-          <div id="content" style="display: none;">
-            <table class="table">
+</head>
+
+<body>
+  <div class="h-full bg-gray-900">
+    <div class="p-8 flex items-center">
+      <div class="col-lg-12" style="
+        width: 80%;
+        margin: auto;
+    ">
+        <div class="md:flex-start mx-auto cursor-pointer" style="
+          margin: auto;
+      ">
+          <h1 class="text-green-300 text-5xl" style="
+            margin: auto;
+            width: fit-content;
+        ">--DappVote--</h1>
+          <!-- <h2 className="flex text-gray-400 my-2">
+              Powered By <p className="text-green-300 ml-1">Finstreet</p> -->
+          </h2>
+        </div>
+        <!-- <h1 class="text-center">--DappVote--</h1> -->
+        <hr />
+        <br />
+        <div id="loader">
+          <p class="text-center">Please Login Using Your Private Key</p>
+        </div>
+        <div id="content" class="m-2 py-8 text-lg text-gray-600">
+          <!-- <table class="table">
               <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Votes</th>
-                </tr>
-              </thead>
-              <tbody id="candidatesResults">
-              </tbody>
-            </table>
-            <hr/>
-            <form onSubmit="App.castVote(); return false;">
-              <div class="form-group">
-                <label for="candidatesSelect">Select Candidate</label>
-                <select class="form-control" id="candidatesSelect">
-                </select>
-              </div>
-              <button type="submit" class="Button Yellow">Vote</button>
-              <hr />
-            </form>
-            <p id="accountAddress" class="text-center"></p>
+                <tr> -->
+          <div class="flex mx-auto items-center justify-between pb-5">
+            <h2 class=" head text-md mx-auto text-green-300 font-bold m-4" scope="col">ID</h2>
+            <h2 class="head text-md mx-auto text-green-300 font-bold m-4" scope="col">Name</h2>
+            <h2 class="head text-md mx-auto text-green-300 font-bold m-4" scope="col">Votes</h2>
           </div>
+          <!-- </tr> -->
+          <!-- </thead> -->
+          <div class="m-2 rounded-lg py-4 bg-gray-700">
+
+            <div id="candidatesResults"></div>
+
+          </div>
+          <!-- </table> -->
+          <hr />
+          <form onSubmit="App.castVote(); return false;">
+            <div class="form-group">
+              <label class="text-green-300" for="candidatesSelect">Select Candidate</label>
+              <select class="head form-control" id="candidatesSelect">
+              </select>
+            </div>
+            <button type="submit" class="Button White">Vote</button>
+      
+            <hr />
+          </form>
+          <p id="accountAddress" class="text-center text-green-300"></p>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/web3.min.js"></script>
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/web3.min.js"></script>
+  <script src="js/truffle-contract.js"></script>
+  <script src="js/app.js"></script>
+</body>
+
 </html>
