added login etc.

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
 <body>
     <div class="home">
     
-    <a href="./addcandidate.html" class="-btn -bg -txt">Admin</a>
-    <a href="./index1.html" class="-btn -bg -txt">Voting Area</a>
+    <a href="./loginPage.html" class="-btn -bg -txt">Admin</a>
+    <a href="http://localhost:3020/login" class="-btn -bg -txt">Voting Area</a>
 
 </div>
 <script src="js/app.js"></script>
