--- a/src/index1.html
+++ b/src/index1.html
@@ -52,7 +52,7 @@
           <div class="flex mx-auto items-center justify-between pb-5">
             <h2 class=" head text-md mx-auto text-green-300 font-bold m-4" scope="col">ID</h2>
             <h2 class="head text-md mx-auto text-green-300 font-bold m-4" scope="col">Name</h2>
-            <h2 class="head text-md mx-auto text-green-300 font-bold m-4" scope="col">Votes</h2>
+            <!-- <h2 class="head text-md mx-auto text-green-300 font-bold m-4" scope="col">Votes</h2> -->
           </div>
           <!-- </tr> -->
           <!-- </thead> -->
