--- a/src/addcandidate.html
+++ b/src/addcandidate.html
@@ -41,7 +41,7 @@
          <form onSubmit="App.add_Candidate(); return false;">
           <div class="canbutton">  
           <input id="newTask" type="text" class="form-control" placeholder="Add New Candidate" required>
-              <input class="sbutton"type="submit" value="Add Candidate">
+              <input class="sbutton"type="submit" value="Add Candidate" >
             </div>
             </form>
             
@@ -62,6 +62,10 @@
       </div>
     </div>
 <div>
+  <div class="buttonBox">
+<button class="startVoting" onclick="disableButton()">Start Voting Phase</button>
+</div>
+
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
