--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,5 +29,6 @@
 </div>
 <script src="js/app.js"></script>
 <script src="js/addCandidate.js"></script>
+
 </body>
 </html>
